<resources>
    <string name="app_name">架构设计Demo</string>
    <string name="network_request_failed">网络请求失败</string>
    <string name="menu_home">首页</string>
    <string name="menu_merchants">商家</string>
    <string name="menu_mall">商场</string>
    <string name="menu_chat">私聊</string>
    <string name="menu_account">我的</string>
    <string name="login">登录</string>
    <string name="hint_password">密码</string>
    <string name="hint_email">邮箱</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码</string>
</resources>
